--- a/.github/workflows/L1-tests.yml
+++ b/.github/workflows/L1-tests.yml
@@ -16,9 +16,7 @@ env:
 jobs:
   L1-tests:
     name: Build and run unit tests
-    runs-on: ubuntu-latest
-    container:
-      image: ghcr.io/rdkcentral/docker-rdk-ci:latest
+    runs-on: ubuntu-22.04
     strategy:
       matrix:
         compiler: [ gcc, clang ]
@@ -75,14 +73,14 @@ jobs:
 
       - name: Install packages
         run: >
-          apt update
+          sudo apt update
           &&
-          apt install -y libsqlite3-dev libcurl4-openssl-dev valgrind lcov clang libsystemd-dev libboost-all-dev libwebsocketpp-dev meson libcunit1 libcunit1-dev curl protobuf-compiler-grpc libgrpc-dev libgrpc++-dev
+          sudo apt install -y libsqlite3-dev libcurl4-openssl-dev valgrind lcov clang libsystemd-dev libboost-all-dev libwebsocketpp-dev meson libcunit1 libcunit1-dev curl protobuf-compiler-grpc libgrpc-dev libgrpc++-dev
 
       - name: Install GStreamer
         run: |
-           apt update
-           apt install -y libunwind-dev libgstreamer1.0-dev libgstreamer-plugins-base1.0-dev
+           sudo apt update
+           sudo apt install -y libunwind-dev libgstreamer1.0-dev libgstreamer-plugins-base1.0-dev
 
       - name: Build trower-base64
         run: |
@@ -92,7 +90,7 @@ jobs:
             cd trower-base64
             meson setup --warnlevel 3 --werror build
             ninja -C build
-            ninja -C build install
+            sudo ninja -C build install
 
       - name: Checkout Thunder
         if: steps.cache.outputs.cache-hit != 'true'
@@ -490,7 +488,7 @@ jobs:
 
       - name: Set up files
         run: >
-          mkdir -p -m 777
+          sudo mkdir -p -m 777
           /tmp/test/testApp/etc/apps
           /opt/persistent
           /opt/secure
@@ -518,7 +516,7 @@ jobs:
           if [ ! -f mknod /dev/sdb1 c 240 0 ]; then mknod /dev/sdb1 c 240 0; fi &&
           if [ ! -f mknod /dev/sdb2 c 240 0 ]; then mknod /dev/sdb2 c 240 0; fi
           &&
-          touch
+          sudo touch
           /tmp/test/testApp/etc/apps/testApp_package.json
           /opt/rdk_maintenance.conf
           /opt/persistent/timeZoneDST
@@ -543,7 +541,7 @@ jobs:
           /tmp/block/sdb/device/vendor
           /tmp/block/sdb/device/model
           &&
-          chmod -R 777
+          sudo chmod -R 777
           /tmp/test/testApp/etc/apps/testApp_package.json
           /opt/rdk_maintenance.conf
           /opt/persistent/timeZoneDST
@@ -566,13 +564,13 @@ jobs:
           &&
           cd /dev/disk/by-id/
           &&
-          ln -s ../../sda /dev/disk/by-id/usb-Generic_Flash_Disk_B32FD507-0
+          sudo ln -s ../../sda /dev/disk/by-id/usb-Generic_Flash_Disk_B32FD507-0
           &&
           ln -s ../../sdb /dev/disk/by-id/usb-JetFlash_Transcend_16GB_UEUIRCXT-0
           &&
           ls -l /dev/disk/by-id/usb-Generic_Flash_Disk_B32FD507-0
           &&
-          ls -l /dev/disk/by-id/usb-JetFlash_Transcend_16GB_UEUIRCXT-0
+          sudo ls -l /dev/disk/by-id/usb-JetFlash_Transcend_16GB_UEUIRCXT-0
 
       - name: Run unit tests with valgrind
         if: ${{ !env.ACT }}
