--- a/.github/workflows/L1-tests.yml
+++ b/.github/workflows/L1-tests.yml
@@ -613,14 +613,8 @@ jobs:
           -o coverage
           -t "entservices-softwareupdate coverage"
           filtered_coverage.info
-          &&
-          # Extract only MaintenanceManager coverage (update the path as necessary)
           lcov --extract filtered_coverage.info "*/MantenanceManager/*" -o maintenancemanager_coverage.info
-          &&
-          genhtml
-          -o coverage
-          -t "MaintenanceManager coverage"
-          maintenancemanager_coverage.info
+          genhtml -o coverage -t "MaintenanceManager coverage" maintenancemanager_coverage.info
 
       - name: Upload artifacts
         if: ${{ !env.ACT }}
