--- a/.github/workflows/L1-tests.yml
+++ b/.github/workflows/L1-tests.yml
@@ -656,7 +656,7 @@ jobs:
           &&
           lcov --extract filtered_coverage.info "*/FirmwareUpdate/FirmwareUpdate*" -o FirmwareUpdate.info
           &&
-          lcov --extract filtered_coverage.info "*/MaintenanceManager/MaintenanceManager*" -o maintenancemanager_coverage.info
+          lcov --extract filtered_coverage.info "*/MaintenanceManager/MaintenanceManager.cpp" -o maintenancemanager_coverage.info
 
       - name: Upload artifacts
         if: ${{ !env.ACT }}
