--- a/.github/workflows/L2-tests.yml
+++ b/.github/workflows/L2-tests.yml
@@ -36,6 +36,10 @@ jobs:
           python-version: '3.x'
       - run: pip install jsonref
 
+      - name: ACK External Trigger
+        run: |
+           echo "Message: HELLO KK External Trigger Recieved for L1 Tests"
+
       - name: Set up CMake
         uses: jwlawson/actions-setup-cmake@v1.13
         with:
@@ -81,7 +85,9 @@ jobs:
       - name: Checkout entservices-softwareupdate
         uses: actions/checkout@v3
         with:
+          repository: rdkcentral/entservices-softwareupdate
           path: entservices-softwareupdate
+          ref: feature/RDKEMW-3513-yml
 
       - name: Checkout entservices-testframework
         uses: actions/checkout@v3
