--- a/.github/workflows/L1-tests.yml
+++ b/.github/workflows/L1-tests.yml
@@ -662,7 +662,7 @@ jobs:
         if: ${{ !env.ACT }}
         uses: actions/upload-artifact@v4
         with:
-          name: artifacts-L1-SU
+          name: artifacts-L1-softwareupdate
           path: |
             coverage/
             valgrind_log
