--- a/.github/workflows/L2-tests.yml
+++ b/.github/workflows/L2-tests.yml
@@ -603,7 +603,7 @@ jobs:
         if: ${{ !env.ACT }}
         uses: actions/upload-artifact@v4
         with:
-          name: artifacts-L2-SU
+          name: artifacts-L2-softwareupdate
           path: |
             coverage/
             valgrind_log
