--- a/.github/workflows/L1-tests.yml
+++ b/.github/workflows/L1-tests.yml
@@ -131,7 +131,7 @@ jobs:
         with:
           repository: rdkcentral/entservices-softwareupdate
           path: entservices-softwareupdate
-          ref: ${{ inputs.caller_branch || github.ref_name || github.head_ref }}
+          ref: ${{ inputs.caller_branch || github.head_ref || github.ref_name || 'develop' }}
 
       - name: Checkout googletest
         if: steps.cache.outputs.cache-hit != 'true'
