--- a/.github/workflows/L2-tests.yml
+++ b/.github/workflows/L2-tests.yml
@@ -93,7 +93,7 @@ jobs:
         with:
           repository: rdkcentral/entservices-softwareupdate
           path: entservices-softwareupdate
-          ref: ${{ inputs.caller_branch || github.ref_name || github.head_ref }}
+          ref: ${{ inputs.caller_branch || github.head_ref || github.ref_name || 'develop' }}
 
       - name: Checkout entservices-testframework
         uses: actions/checkout@v3
