--- a/.github/workflows/L2-tests.yml
+++ b/.github/workflows/L2-tests.yml
@@ -3,9 +3,9 @@ name: L2-tests
 on:
   workflow_call:
     inputs:
-      caller_branch:
-        description: "The branch name to checkout for the entservices-softwareupdate repository."
-        required: false
+      caller_source:
+        description: "Specifies the source type (e.g., local or test framework) for the workflow."
+        required: true
         type: string
     secrets:
       RDKCM_RDKE:
@@ -44,7 +44,7 @@ jobs:
       - name: ACK External Trigger
         run: |
            echo "Message: External Trigger Received for L2 Tests"
-           echo "Branch: ${{ inputs.caller_branch || github.head_ref || github.ref_name }}"
+           echo "Branch: ${{ inputs.caller_source }}"
 
       - name: Set up CMake
         uses: jwlawson/actions-setup-cmake@v1.13
@@ -89,11 +89,18 @@ jobs:
           ref: R4.4.3
 
       - name: Checkout entservices-softwareupdate
+        if: ${{ inputs.caller_source == 'local' }}
+        uses: actions/checkout@v3
+        with:
+          path: entservices-softwareupdate
+
+      - name: Checkout entservices-softwareupdate-testframework
+        if: ${{ inputs.caller_source == 'testframework' }}
         uses: actions/checkout@v3
         with:
           repository: rdkcentral/entservices-softwareupdate
           path: entservices-softwareupdate
-          ref: ${{ inputs.caller_branch || github.head_ref || github.ref_name || 'develop' }}
+          ref: develop
 
       - name: Checkout entservices-testframework
         uses: actions/checkout@v3
